--- a/RapidRecruit/Views/Shared/Error.cshtml
+++ b/RapidRecruit/Views/Shared/Error.cshtml
@@ -1,25 +1,25 @@
 ﻿@model ErrorViewModel
 @{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Greška";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">Greška.</h1>
+<h2 class="text-danger">Dogodila se greška tokom obrade vašeg zahteva.</h2>
 
 @if (Model.ShowRequestId)
 {
     <p>
-        <strong>Request ID:</strong> <code>@Model.RequestId</code>
+        <strong>ID zahteva:</strong> <code>@Model.RequestId</code>
     </p>
 }
 
-<h3>Development Mode</h3>
+<h3>Development režim</h3>
 <p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
+    Prebacivanje na <strong>Development</strong> okruženje će prikazati detaljnije informacije o grešci koja se dogodila.
 </p>
 <p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
+    <strong>Development okruženje ne bi trebalo biti omogućeno za primenjene aplikacije.</strong>
+    Može rezultovati prikazivanjem osetljivih informacija iz izuzetaka krajnjim korisnicima.
+    Za lokalno otklanjanje grešaka, omogućite <strong>Development</strong> okruženje postavljanjem <strong>ASPNETCORE_ENVIRONMENT</strong> promenljive okruženja na <strong>Development</strong>
+    i pokretanjem aplikacije ponovo.
 </p>
