--- a/RapidRecruit/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/RapidRecruit/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -1,17 +1,17 @@
 ﻿@page
 @model ExternalLoginModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registracija";
 }
 
 <h1>@ViewData["Title"]</h1>
-<h2 id="external-login-title">Associate your @Model.ProviderDisplayName account.</h2>
+<h2 id="external-login-title">Povežite vaš @Model.ProviderDisplayName nalog.</h2>
 <hr />
 
 <p id="external-login-description" class="text-info">
-    You've successfully authenticated with <strong>@Model.ProviderDisplayName</strong>.
-    Please enter an email address for this site below and click the Register button to finish
-    logging in.
+    Uspešno ste se autentifikovali sa <strong>@Model.ProviderDisplayName</strong>.
+    Molimo unesite email adresu za ovaj sajt ispod i kliknite dugme Registruj se da završite
+    prijavljivanje.
 </p>
 
 <div class="row">
@@ -19,11 +19,11 @@
         <form asp-page-handler="Confirmation" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="email" placeholder="Please enter your email."/>
-                <label asp-for="Input.Email" class="form-label"></label>
+                <input asp-for="Input.Email" class="form-control" autocomplete="email" placeholder="Molimo unesite vaš email."/>
+                <label asp-for="Input.Email" class="form-label">Email</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Registruj se</button>
         </form>
     </div>
 </div>
