--- a/RapidRecruit/Areas/Identity/Pages/Account/Manage/GenerateRecoveryCodes.cshtml
+++ b/RapidRecruit/Areas/Identity/Pages/Account/Manage/GenerateRecoveryCodes.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model GenerateRecoveryCodesModel
 @{
-    ViewData["Title"] = "Generate two-factor authentication (2FA) recovery codes";
+    ViewData["Title"] = "Generiraj kodove za oporavak dvofaktorske autentifikacije (2FA)";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
@@ -10,18 +10,18 @@
 <div class="alert alert-warning" role="alert">
     <p>
         <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>Put these codes in a safe place.</strong>
+        <strong>Stavite ove kodove na sigurno mesto.</strong>
     </p>
     <p>
-        If you lose your device and don't have the recovery codes you will lose access to your account.
+        Ako izgubite uređaj i nemate kodove za oporavak, izgubićete pristup vašem nalogu.
     </p>
     <p>
-        Generating new recovery codes does not change the keys used in authenticator apps. If you wish to change the key
-        used in an authenticator app you should <a asp-page="./ResetAuthenticator">reset your authenticator keys.</a>
+        Generisanje novih kodova za oporavak ne menja ključeve korišćene u autentifikator aplikacijama. Ako želite da promenite ključ
+        korišćen u autentifikator aplikaciji trebalo bi da <a asp-page="./ResetAuthenticator">resetujete vaše ključeve autentifikatora.</a>
     </p>
 </div>
 <div>
     <form method="post">
-        <button class="btn btn-danger" type="submit">Generate Recovery Codes</button>
+        <button class="btn btn-danger" type="submit">Generiraj Kodove za Oporavak</button>
     </form>
 </div>
