--- a/RapidRecruit/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
+++ b/RapidRecruit/Areas/Identity/Pages/Account/Manage/ResetAuthenticator.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ResetAuthenticatorModel
 @{
-    ViewData["Title"] = "Reset authenticator key";
+    ViewData["Title"] = "Resetuj ključ autentifikatora";
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
@@ -10,15 +10,15 @@
 <div class="alert alert-warning" role="alert">
     <p>
         <span class="glyphicon glyphicon-warning-sign"></span>
-        <strong>If you reset your authenticator key your authenticator app will not work until you reconfigure it.</strong>
+        <strong>Ako resetujete ključ autentifikatora, vaša autentifikator aplikacija neće raditi dok je ponovo ne konfigurirate.</strong>
     </p>
     <p>
-        This process disables 2FA until you verify your authenticator app.
-        If you do not complete your authenticator app configuration you may lose access to your account.
+        Ovaj proces onemogućava 2FA dok ne verifikujete vašu autentifikator aplikaciju.
+        Ako ne završite konfiguraciju autentifikator aplikacije možete izgubiti pristup vašem nalogu.
     </p>
 </div>
 <div>
     <form id="reset-authenticator-form" method="post">
-        <button id="reset-authenticator-button" class="btn btn-danger" type="submit">Reset authenticator key</button>
+        <button id="reset-authenticator-button" class="btn btn-danger" type="submit">Resetuj ključ autentifikatora</button>
     </form>
 </div>
