--- a/RapidRecruit/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/RapidRecruit/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -1,31 +1,31 @@
 ﻿@page
 @model SetPasswordModel
 @{
-    ViewData["Title"] = "Set password";
+    ViewData["Title"] = "Postavite lozinku";
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h3>Set your password</h3>
+<h3>Postavite vašu lozinku</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
 <p class="text-info">
-    You do not have a local username/password for this site. Add a local
-    account so you can log in without an external login.
+    Nemate lokalno korisničko ime/lozinku za ovaj sajt. Dodajte lokalni
+    nalog da možete da se prijavite bez spoljne prijave.
 </p>
 <div class="row">
     <div class="col-md-6">
         <form id="set-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" placeholder="Please enter your new password."/>
-                <label asp-for="Input.NewPassword" class="form-label"></label>
+                <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" placeholder="Molimo unesite vašu novu lozinku."/>
+                <label asp-for="Input.NewPassword" class="form-label">Nova lozinka</label>
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" placeholder="Please confirm your new password."/>
-                <label asp-for="Input.ConfirmPassword" class="form-label"></label>
+                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" placeholder="Molimo potvrdite vašu novu lozinku."/>
+                <label asp-for="Input.ConfirmPassword" class="form-label">Potvrda lozinke</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Set password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Postavite lozinku</button>
         </form>
     </div>
 </div>
