--- a/RapidRecruit/Views/Shared/_Layout.cshtml
+++ b/RapidRecruit/Views/Shared/_Layout.cshtml
@@ -70,6 +70,7 @@
 
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/localization/messages_sr.js"></script>
     <script>
         // Mobile menu toggle
         document.querySelector('[aria-controls="mobile-menu"]').addEventListener('click', function () {
